# inventario_faces

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: auto-bump-version.yml
config/: defaults.yaml
models/: README.txt
src/inventario_faces/: __init__.py  __main__.py  app.py  versioning.py
src/inventario_faces/config/: __init__.py  defaults.yaml
src/inventario_faces/domain/: config.py  entities.py  protocols.py
src/inventario_faces/gui/: __init__.py  config_dialog.py  config_help.py  distributed_monitor_dialog.py  face_set_comparison_dialog.py  face_set_comparison_help.py  icon_utils.py  main_window.py  worker.py
src/inventario_faces/infrastructure/: artifact_store.py  config_loader.py  distributed_coordination.py  face_analyzer_insight.py  face_mesh_renderer.py  latex_compiler.py  logging_setup.py  media_info_service.py
src/inventario_faces/reporting/: __init__.py  combined_face_search_report_generator.py  combined_report_generator.py  docx_renderer.py  face_search_docx_renderer.py  face_search_latex_renderer.py  latex_renderer.py  report_context.py  report_support.py
src/inventario_faces/reporting/templates/: forensic_report_template.tex
src/inventario_faces/services/: __init__.py  clustering_service.py  enhancement_service.py  export_service.py  hashing_service.py  inventory_service.py  quality_service.py  scanner_service.py  search_service.py  tracking_service.py  video_service.py
src/inventario_faces/utils/: density_utils.py  latex.py  math_utils.py  path_utils.py  serialization.py  time_utils.py
tests/: __init__.py  test_clustering.py  test_config_help.py  test_config_persistence.py  test_density_utils.py  test_distributed_processing.py  test_docx_report.py  test_face_search_reports.py  test_face_set_comparison_help.py  test_face_set_comparison_statistics.py  test_hashing.py  test_insightface_adapter.py  test_inventory_pipeline.py  test_latex_report_fallback.py  test_logging_setup.py  test_media_info_service.py  test_report_context.py  test_scanner.py  test_tracking.py  test_version_metadata.py  test_versioning.py  test_video_service.py
tools/: bump_version.py
