[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventario-faces"
dynamic = ["version"]
description = "Aplicativo desktop forense para inventario assistido de faces em imagens e videos."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "opencv-python>=4.10",
  "PySide6>=6.8",
  "PyYAML>=6.0",
  "onnxruntime-gpu[cuda,cudnn]>=1.22; platform_system == 'Windows'",
  "onnxruntime>=1.22; platform_system != 'Windows'",
  "python-docx>=1.2",
  "Pillow>=10.0"
]

[project.urls]
Homepage = "https://github.com/demusis/inventario_faces"
Repository = "https://github.com/demusis/inventario_faces"
Issues = "https://github.com/demusis/inventario_faces/issues"

[project.optional-dependencies]
face = [
  "insightface>=0.7.3; python_version < '3.13'"
]
build = [
  "pyinstaller>=6.11"
]
search = [
  "faiss-cpu>=1.8"
]

[project.scripts]
inventario-faces = "inventario_faces.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "inventario_faces.__version__" }

[tool.setuptools.package-data]
inventario_faces = [
  "reporting/templates/*.tex",
  "config/*.yaml",
  "assets/*.png",
  "assets/*.ico"
]
